--- a/index.html
+++ b/index.html
@@ -60,6 +60,16 @@
     }
 
     .card {
+      .btn {
+  display: inline-block;
+  margin-top: 12px;
+  padding: 10px 18px;
+  background: #111;
+  color: white;
+  border-radius: 10px;
+  text-decoration: none;
+}
+
       background: white;
       padding: 25px;
       border-radius: 12px;
@@ -134,6 +144,28 @@
     </div>
   </section>
 
+<section>
+  <h2>Remme</h2>
+  <div class="services">
+    <div class="card">
+      <img src="https://via.placeholder.com/500x300.png?text=Metal+rem+-+gr%C3%A5" alt="Metal rem grå">
+      <h3>Metal rem (grå)</h3>
+      <p>Pris: 125 kr.</p>
+      <p>Materiale: Metal</p>
+      <a class="btn" href="rem1.html">Se produkt</a>
+    </div>
+
+    <div class="card">
+      <img src="https://via.placeholder.com/500x300.png?text=L%C3%A6der+rem+-+sort+med+guld" alt="Læder rem sort med guld">
+      <h3>Læder rem (sort med guld)</h3>
+      <p>Pris: 300 kr.</p>
+      <p>Materiale: Læder</p>
+      <a class="btn" href="rem2.html">Se produkt</a>
+    </div>
+  </div>
+</section>
+
+  
   <section>
     <h2>Om CORPS</h2>
     <div class="about">
@@ -164,3 +196,4 @@
 
 </body>
 </html>
+
