--- a/index.html
+++ b/index.html
@@ -164,6 +164,12 @@
     </div>
   </div>
 </section>
+<div class="product-card">
+  <img src="images/remlædder" alt="Sort læderrem">
+  <h3>Sort læderrem</h3>
+  <p>Pris: 399 kr</p>
+  <button onclick="contact()">Kontakt for køb</button>
+</div>
 
   
   <section>
@@ -196,6 +202,7 @@
 
 </body>
 </html>
+
 
 
 
