--- a/index.html
+++ b/index.html
@@ -170,6 +170,20 @@
   <p>Pris: 399 kr</p>
   <button onclick="contact()">Kontakt for køb</button>
 </div>
+  <div class="product-card">
+  <img src="images/remlædder" alt="Sort læderrem">
+  <h3>Sort læderrem</h3>
+  <p>Pris: 399 kr</p>
+  <button onclick="contact()">Kontakt for køb</button>
+</div>
+
+<div class="product-card">
+  <img src="images/remmetal" alt="Stålrem">
+  <h3>Stålrem</h3>
+  <p>Pris: 599 kr</p>
+  <button onclick="contact()">Kontakt for køb</button>
+</div>
+
 
   
   <section>
@@ -202,6 +216,7 @@
 
 </body>
 </html>
+
 
 
 
