--- a/index.html
+++ b/index.html
@@ -143,46 +143,24 @@
       </div>
     </div>
   </section>
-
-<section>
+<div class="card" style="padding:20px; border:1px solid #ccc; border-radius:10px; max-width:300px; text-align:center;">
   <h2>Remme</h2>
-  <div class="services">
-    <div class="card">
-      <img src="https://via.placeholder.com/500x300.png?text=Metal+rem+-+gr%C3%A5" alt="Metal rem grå">
-      <h3>Metal rem (grå)</h3>
-      <p>Pris: 150 kr.</p>
-      <p>Materiale: Metal</p>
-      <a class="btn" href="rem1.html">Se produkt</a>
-    </div>
 
-    <div class="card">
-      <img src="https://via.placeholder.com/500x300.png?text=L%C3%A6der+rem+-+sort+med+guld" alt="Læder rem sort med guld">
-      <h3>Læder rem (sort med guld)</h3>
-      <p>Pris: 300 kr.</p>
-      <p>Materiale: Læder</p>
-      <a class="btn" href="rem2.html">Se produkt</a>
-    </div>
-  </div>
-</section>
-<div class="product-card">
-  <img src="images/remlædder" alt="Sort læderrem">
-  <h3>Sort læderrem</h3>
-  <p>Pris: 399 kr</p>
-  <button onclick="contact()">Kontakt for køb</button>
-</div>
-  <div class="product-card">
-  <img src="images/remlædder" alt="Sort læderrem">
-  <h3>Sort læderrem</h3>
-  <p>Pris: 399 kr</p>
-  <button onclick="contact()">Kontakt for køb</button>
+  <!-- Første produktbillede -->
+  <img src="remlædder" alt="Remlædder" style="width:100%; height:auto; margin-bottom:5px; border-radius:5px;">
+  <p style="margin:0; font-weight:bold;">Pris: 150 kr</p>
+
+  <!-- Andet produktbillede -->
+  <img src="remmetal" alt="Remmetal" style="width:100%; height:auto; margin-top:10px; margin-bottom:5px; border-radius:5px;">
+  <p style="margin:0; font-weight:bold;">Pris: 200 kr</p>
+
+  <!-- Kontakt os knap -->
+  <a href="mailto:mathias.egmontpetersen@gmail.com"
+     style="display:block; text-align:center; padding:10px 20px; background-color:#007BFF; color:white; text-decoration:none; border-radius:5px; margin-top:15px;">
+     Kontakt os
+  </a>
 </div>
 
-<div class="product-card">
-  <img src="images/remmetal" alt="Stålrem">
-  <h3>Stålrem</h3>
-  <p>Pris: 599 kr</p>
-  <button onclick="contact()">Kontakt for køb</button>
-</div>
 
 
   
@@ -216,6 +194,7 @@
 
 </body>
 </html>
+
 
 
 
