--- a/index.html
+++ b/index.html
@@ -145,15 +145,16 @@
   </section>
 <div class="card" style="padding:20px; border:1px solid #ccc; border-radius:10px; max-width:300px; text-align:center;">
   <h2>Remme</h2>
-
-  <!-- Første produktbillede -->
+ <!-- Første produktbillede -->
   <img src="remlædder" alt="Remlædder" style="width:100%; height:auto; margin-bottom:5px; border-radius:5px;">
   <p style="margin:0; font-weight:bold;">Pris: 150 kr</p>
 
+   <!-- Kontakt os knap -->
   <!-- Andet produktbillede -->
   <img src="remmetal" alt="Remmetal" style="width:100%; height:auto; margin-top:10px; margin-bottom:5px; border-radius:5px;">
   <p style="margin:0; font-weight:bold;">Pris: 200 kr</p>
 
+ 
   <!-- Kontakt os knap -->
   <a href="mailto:mathias.egmontpetersen@gmail.com"
      style="display:block; text-align:center; padding:10px 20px; background-color:#007BFF; color:white; text-decoration:none; border-radius:5px; margin-top:15px;">
@@ -194,6 +195,7 @@
 
 </body>
 </html>
+
 
 
 
